<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.capicua.gamecontroller.presentation.home.HomeFragment"
        android:label="@string/nav_home" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.capicua.gamecontroller.presentation.settings.SettingsFragment"
        android:label="@string/nav_settings" />

    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.capicua.gamecontroller.presentation.about.AboutFragment"
        android:label="@string/nav_about" />

    <fragment
        android:id="@+id/logFragment"
        android:name="com.capicua.gamecontroller.presentation.log.LogFragment"
        android:label="@string/nav_log" />

</navigation>
